feat: Swagger 응답 스키마(DTO) 추가
