# docs/swagger.json
@@ -28,7 +28,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_adapter_http.loginRequest"
+                            "$ref": "#/definitions/httpadapter.loginRequest"
                         }
                     }
                 ],
@@ -36,10 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/LoginResponse"
                         }
                     }
                 }
@@ -64,7 +61,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_adapter_http.signUpRequest"
+                            "$ref": "#/definitions/httpadapter.signUpRequest"
                         }
                     }
                 ],
@@ -72,10 +69,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/UserResponse"
                         }
                     }
                 }
@@ -99,10 +93,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/UserResponse"
                         }
                     }
                 }
@@ -128,10 +119,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "object",
-                                "additionalProperties": {
-                                    "type": "string"
-                                }
+                                "$ref": "#/definitions/NotificationResponse"
                             }
                         }
                     }
@@ -156,10 +144,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/MessageResponse"
                         }
                     }
                 }
@@ -192,10 +177,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/NotificationResponse"
                         }
                     }
                 }
@@ -225,7 +207,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_adapter_http.createRoomRequest"
+                            "$ref": "#/definitions/httpadapter.createRoomRequest"
                         }
                     }
                 ],
@@ -233,10 +215,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/RoomResponse"
                         }
                     }
                 }
@@ -266,7 +245,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_adapter_http.joinRoomRequest"
+                            "$ref": "#/definitions/httpadapter.joinRoomRequest"
                         }
                     }
                 ],
@@ -274,10 +253,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/JoinRoomResponse"
                         }
                     }
                 }
@@ -310,8 +286,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/RoomDetailResponse"
                         }
                     }
                 }
@@ -346,10 +321,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "object",
-                                "additionalProperties": {
-                                    "type": "string"
-                                }
+                                "$ref": "#/definitions/MatchResponse"
                             }
                         }
                     }
@@ -390,8 +362,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/MatchDetailResponse"
                         }
                     }
                 }
@@ -426,10 +397,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "object",
-                                "additionalProperties": {
-                                    "type": "string"
-                                }
+                                "$ref": "#/definitions/QueueEntryResponse"
                             }
                         }
                     }
@@ -465,7 +433,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_adapter_http.createQueueEntryRequest"
+                            "$ref": "#/definitions/httpadapter.createQueueEntryRequest"
                         }
                     }
                 ],
@@ -473,10 +441,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/QueueEntryResponse"
                         }
                     }
                 }
@@ -516,10 +481,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/QueueEntryResponse"
                         }
                     }
                 }
@@ -554,10 +516,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "object",
-                                "additionalProperties": {
-                                    "type": "string"
-                                }
+                                "$ref": "#/definitions/HubStopResponse"
                             }
                         }
                     }
@@ -593,7 +552,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_adapter_http.createHubStopRequest"
+                            "$ref": "#/definitions/httpadapter.createHubStopRequest"
                         }
                     }
                 ],
@@ -601,10 +560,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/HubStopResponse"
                         }
                     }
                 }
@@ -648,7 +604,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_adapter_http.updateHubStopRequest"
+                            "$ref": "#/definitions/httpadapter.updateHubStopRequest"
                         }
                     }
                 ],
@@ -656,10 +612,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/HubStopResponse"
                         }
                     }
                 }
@@ -697,10 +650,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/MessageResponse"
                         }
                     }
                 }
@@ -708,7 +658,264 @@
         }
     },
     "definitions": {
-        "internal_adapter_http.createHubStopRequest": {
+        "HubStopResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "room_id": {
+                    "type": "string"
+                },
+                "sort_order": {
+                    "type": "string"
+                }
+            }
+        },
+        "JoinRoomResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "invite_code": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "LoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "token_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "MatchDetailResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/MatchMemberResponse"
+                    }
+                },
+                "room_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "MatchMemberResponse": {
+            "type": "object",
+            "properties": {
+                "from_stop_id": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "queue_entry_id": {
+                    "type": "string"
+                },
+                "time_end": {
+                    "type": "string"
+                },
+                "time_start": {
+                    "type": "string"
+                },
+                "to_stop_id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "MatchResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "room_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "MessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "NotificationResponse": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "read_at": {
+                    "type": "string"
+                },
+                "ref_id": {
+                    "type": "string"
+                },
+                "ref_type": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "QueueEntryResponse": {
+            "type": "object",
+            "properties": {
+                "from_stop_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "match_id": {
+                    "type": "string"
+                },
+                "max_seats": {
+                    "type": "string"
+                },
+                "min_seats": {
+                    "type": "string"
+                },
+                "room_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "time_end": {
+                    "type": "string"
+                },
+                "time_start": {
+                    "type": "string"
+                },
+                "to_stop_id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "RoomDetailResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "invite_code": {
+                    "type": "string"
+                },
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/RoomMemberResponse"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "openchat_url": {
+                    "type": "string"
+                },
+                "owner_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "RoomMemberResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "RoomResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "invite_code": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "openchat_url": {
+                    "type": "string"
+                },
+                "owner_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "UserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                }
+            }
+        },
+        "httpadapter.createHubStopRequest": {
             "type": "object",
             "properties": {
                 "name": {
@@ -719,7 +926,7 @@
                 }
             }
         },
-        "internal_adapter_http.createQueueEntryRequest": {
+        "httpadapter.createQueueEntryRequest": {
             "type": "object",
             "properties": {
                 "from_stop_id": {
@@ -742,7 +949,7 @@
                 }
             }
         },
-        "internal_adapter_http.createRoomRequest": {
+        "httpadapter.createRoomRequest": {
             "type": "object",
             "properties": {
                 "name": {
@@ -753,7 +960,7 @@
                 }
             }
         },
-        "internal_adapter_http.joinRoomRequest": {
+        "httpadapter.joinRoomRequest": {
             "type": "object",
             "properties": {
                 "invite_code": {
@@ -761,7 +968,7 @@
                 }
             }
         },
-        "internal_adapter_http.loginRequest": {
+        "httpadapter.loginRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -772,7 +979,7 @@
                 }
             }
         },
-        "internal_adapter_http.signUpRequest": {
+        "httpadapter.signUpRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -786,7 +993,7 @@
                 }
             }
         },
-        "internal_adapter_http.updateHubStopRequest": {
+        "httpadapter.updateHubStopRequest": {
             "type": "object",
             "properties": {
                 "name": {
